# CADLab

./: LICENSE.md  README.md  ReadMe.txt
CNNSliceClassifier/itkApps/: CMakeLists.txt
CNNSliceClassifier/itkApps/Apps/: itkExtractImageSlices.cxx  itkExtractImageSlices.cxx~  itkRandomlyDeformImages2D.cxx
CNNSliceClassifier/itkApps/Libs/: nihHelperFunctions.h
LymphNodeRFCNNPipeline/nifty_reg-1.3.9/nifty_reg/: CMakeLists.txt  CTestConfig.cmake  Doxyfile.in  README.txt
LymphNodeRFCNNPipeline/niftyreg-git/: CMakeLists.txt  Doxyfile.in  NiftyRegSetEnvUnix.sh  this_niftyreg_version_git-log.txt
LymphNodeRFCNNPipeline/niftyreg-git/cuda/: checkCudaCard.cpp
LymphNodeRFCNNPipeline/niftyreg-git/reg-apps/: CMakeLists.txt  groupwise_niftyreg_params.sh  groupwise_niftyreg_run.sh  reg_aladin.cpp  reg_aladin.h  reg_average.cpp  reg_average.h  reg_benchmark.cpp  reg_f3d.cpp  reg_f3d.h  reg_jacobian.cpp  reg_jacobian.h  reg_measure.cpp  reg_polyAffine.cpp  reg_ppcnr.cpp  reg_resample.cpp  reg_resample.h  reg_tools.cpp  reg_tools.h  reg_transform.cpp  reg_transform.h
LymphNodeRFCNNPipeline/niftyreg-git/reg-io/: _reg_ReadWriteImage.cpp
LymphNodeRFCNNPipeline/niftyreg-git/reg-lib/: CMakeLists.txt  _reg_KLdivergence.cpp  _reg_KLdivergence.h  _reg_aladin.cpp  _reg_aladin.h  _reg_aladin_sym.cpp  _reg_aladin_sym.h  _reg_base.cpp  _reg_base.h  _reg_blockMatching.cpp  _reg_blockMatching.h  _reg_blockMatching_gpu.cu  _reg_blockMatching_gpu.h  _reg_blockMatching_kernels.cu  _reg_blocksize_gpu.cu  _reg_blocksize_gpu.h  _reg_common_gpu.cu  _reg_common_gpu.h  _reg_dti.cpp  _reg_dti.h  _reg_f3d.cpp  _reg_f3d.h  _reg_f3d2.cpp  _reg_f3d2.h  _reg_f3d_gpu.cpp  _reg_f3d_gpu.h  _reg_f3d_sym.cpp  _reg_f3d_sym.h  _reg_femTransformation.cpp  _reg_femTransformation.h  _reg_globalTransformation.cpp  _reg_globalTransformation.h  _reg_globalTransformation_gpu.cu  _reg_globalTransformation_gpu.h  _reg_globalTransformation_kernels.cu  _reg_lncc.cpp  _reg_lncc.h  _reg_localTransformation.cpp  _reg_localTransformation.h  _reg_localTransformation_be.cpp  (+37 more)
LymphNodeRFCNNPipeline/niftyreg-git/reg-test/: CMakeLists.txt  CTestCustom.cmake.in  create_test_data.sh  reg_test_affine_deformation_field.cpp  reg_test_compose_deformation_field.cpp  reg_test_fullAffine.cpp  reg_test_fullNonlinear.cpp  reg_test_fullSymNonlinear.cpp  reg_test_interpolation.cpp  reg_test_matrix_operation.cpp  reg_test_measure.cpp  reg_test_nonlinear_deformation_field.cpp  reg_test_svd.cpp
LymphNodeRFCNNPipeline/pyconvnet/: CMakeLists.txt  Makefile  NOTICE  _build.sh  check_gc.sh  cifar10.py  combine_pred.py  common-gcc-cuda-4.0.mk  convdata.py  convnet.py  data.py  filename.pickle  generate_imagenet_data.py  generate_lymph_node_data.py  get_data_mean.py  gpumodel.py  how_to_run_DropConnect.bat  imagenetdata.py  layer.py  model_fc128-dcf_log.txt  options.py  run_bash_scripts.sh  run_bash_scripts_batch1234.sh  run_bash_scripts_batch2345.sh  run_bash_scripts_batch3451.sh  run_bash_scripts_batch4512.sh  run_bash_scripts_batch5123.sh  run_multiple_nets_lymph_nodes.sh  run_multiple_nets_lymph_nodes_batch1234.sh  run_multiple_nets_lymph_nodes_batch2345.sh  run_multiple_nets_lymph_nodes_batch3451.sh  run_multiple_nets_lymph_nodes_batch4512.sh  run_multiple_nets_lymph_nodes_batch5123.sh  run_multiple_nets_lymph_nodes_with_new_data.sh  run_multiple_nets_lymph_nodes_with_permutations.sh  run_net.sh  run_net_lymph_nodes.sh  run_net_lymph_nodes_Nbatches.sh  run_net_lymph_nodes_with_new_data.sh  run_net_test.sh  (+5 more)
LymphNodeRFCNNPipeline/pyconvnet/ITKapps/: itkConvertIndexToPhysicalPoints.cxx  itkGetRegionOfInterestCentersFromList.cxx  itkReadWriteImage.cxx  itkResampleRegionOfInterestFromCoordinateList.cxx
LymphNodeRFCNNPipeline/pyconvnet/LIBS/: libopenblas.lib
LymphNodeRFCNNPipeline/pyconvnet/cifar-layers/: layer-params-80sec.cfg  layers-2fc-dc.cfg  layers-2fc-do.cfg  layers-2fc.cfg  layers-2fc128-11pct-dc.cfg  layers-2fc128-11pct-do.cfg  layers-2fc512-11pct-dc.cfg  layers-2fc512-11pct-do.cfg  layers-80sec.cfg  layers-conv-local-11pct.cfg  layers-fc-11pct-dc.cfg  layers-fc-11pct-do.cfg  layers-fc-11pct.cfg  layers-fc-13pct-dc.cfg  layers-fc-13pct-do.cfg  layers-fc-13pct.cfg  layers-fc-conv32-dc.cfg  layers-fc1024-11pct-dc.cfg  layers-fc2048-11pct-dc.cfg  layers-fc512-11pct-dc.cfg  params-2fc-11pct.cfg  params-2fc128-11pct.cfg  params-conv-local-13pct.cfg  params-fc-11pct.cfg  params-fc-13pct.cfg  params-fc-conv32.cfg  params-fc1024-11pct.cfg  params-fc2048-11pct.cfg  params-fc512-11pct.cfg
LymphNodeRFCNNPipeline/pyconvnet/cuda/: checkCudaCard.cpp
LymphNodeRFCNNPipeline/pyconvnet/doc/: Makefile  algorithm2e.sty  dropc.tex  refs.bib
LymphNodeRFCNNPipeline/pyconvnet/example-layers/: layer-params-18pct.cfg  layer-params-19pct.cfg  layer-params-80sec.cfg  layer-params-conv-local-11pct.cfg  layer-params-example.cfg  layer-params.gc.cfg  layers-18pct.cfg  layers-19pct.cfg  layers-80sec.cfg  layers-conv-local-13pct.cfg  layers-example.cfg
LymphNodeRFCNNPipeline/pyconvnet/gc-layers/: layers.gc.cfg  layers2.gc.cfg  layers3.gc.cfg  layers4.gc.cfg  layers5.gc.cfg  params2.gc.cfg
LymphNodeRFCNNPipeline/pyconvnet/include/: convnet.cuh  cost.cuh  data.cuh  layer.cuh  layer_kernels.cuh  neuron.cuh  pyconvnet.cuh  util.cuh  weights.cuh  worker.cuh
LymphNodeRFCNNPipeline/pyconvnet/kaggle-cifar/: README.md  make_test_batches.py  predict.py  predict_multiview.py  shownet.py
LymphNodeRFCNNPipeline/pyconvnet/lymph-nodes/: balance_files.py  balance_files_from_sources.py  balance_files_from_sources.sh  clean_zero_files.py  clean_zero_files.sh  clean_zero_files_batch1234.sh  clean_zero_files_batch2345.sh  clean_zero_files_batch3451.sh  clean_zero_files_batch4512.sh  clean_zero_files_batch5123.sh  convertRGBtoGray.py  convertRGBtoGray.sh  extract_files.py  extract_files.sh  extract_files_batch.sh  make_batches.py  make_batches.sh  make_batches_batch1234.sh  make_batches_batch2345.sh  (+18 more)
SortDicomFiles/: CMakeLists.txt  Common.cpp  Common.h  LICENSE.txt  README.txt  SortDicomFiles.cpp  bsdgetopt.c  bsdgetopt.h  strcasestr.c  strcasestr.h
panreas_hnn/nihApps/: CMakeLists.txt
(+2615 files in other folders)
