# 
# Nathan Lay
# Imaging Biomarkers and Computer-Aided Diagnosis Laboratory
# National Institutes of Health
# March 2017
# 
# THIS SOFTWARE IS PROVIDED BY THE AUTHOR(S) ``AS IS'' AND ANY EXPRESS OR
# IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
# OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
# IN NO EVENT SHALL THE AUTHOR(S) BE LIABLE FOR ANY DIRECT, INDIRECT,
# INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
# NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
# DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
# THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
# THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
#

cmake_minimum_required(VERSION 2.8)

PROJECT(SortDicomFiles C CXX)

IF (CMAKE_COMPILER_IS_GNUCXX)
  SET(CMAKE_CXX_FLAGS "--std=c++11 ${CMAKE_CXX_FLAGS}")
ENDIF()

OPTION(USE_MD5 "Enable MD5 hash patterns" OFF)

IF (USE_MD5)
  ADD_DEFINITIONS(-DUSE_MD5=1)
ENDIF()

FIND_PACKAGE(ITK REQUIRED ITKCommon ITKGDCM ITKIOGDCM ITKIOMeta ITKTestKernel)

INCLUDE(${ITK_USE_FILE})

ADD_EXECUTABLE(SortDicomFiles 
  SortDicomFiles.cpp 
  Common.h Common.cpp
  strcasestr.h strcasestr.c
  bsdgetopt.h bsdgetopt.c)
TARGET_LINK_LIBRARIES(SortDicomFiles ${ITK_LIBRARIES})

